--- a/News.Entities/News.Entities.csproj
+++ b/News.Entities/News.Entities.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Data\Comment.cs" />
+    <Compile Include="Data\IdentityModels.cs" />
     <Compile Include="Data\News.cs" />
     <Compile Include="Migrations\DbMigrationsConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
