--- a/News/News.csproj
+++ b/News/News.csproj
@@ -201,6 +201,7 @@
     <Content Include="images\image1.jpg" />
     <Content Include="images\image2.png" />
     <Content Include="images\kpmg-logo.jpg" />
+    <Content Include="images\like.png" />
     <Content Include="images\slideimage1.jpg" />
     <Content Include="images\slideimage1.png" />
     <Content Include="images\slideimage3.jpg" />
